# GrafanaDashboards

./: README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: work_item_validation.yml
automated_dashboards/: pyproject.toml
automated_dashboards/src/automated_dashboards/: dashboard_builder.py
automated_dashboards/src/automated_dashboards/common/: common.py
automated_dashboards/src/automated_dashboards/dashboards/: all_dashboards.py
src/automated_dashboards/: dashboard_builder.py
src/automated_dashboards/common/: common.py
src/automated_dashboards/dashboards/: all_dashboards.py
src/automated_dashboards/helpers/: default_dashboard.py  jams_default_dash.py  network_dash_default.py
