[project]
name = "automated-dashboards"
version = "1.0.0"
description = "A module to automate the creation and management of Grafana dashboards."
readme = "README.md"
authors = [{ name = "Tyler" }]
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "grafana-foundation-sdk==1759917807",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
