[project]
name = "automated-dashboards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tyler Sanger", email = "tylersanger@attainfinance.com" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "grafana-foundation-sdk==1759917807",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
